infra/opa/allowedrepos_constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  name: allowed-repos
spec:
  enforcementAction: deny
  parameters:
    repos:
      - "ko.local/"
      - "dev.local/"
      - "kind.local/"
      - "localhost:5000/"
      - "127.0.0.1:5000/"
